# Fan-Curve-App

./: .gitignore  Cargo.toml  LICENSE  Makefile  PWM_TEST_REPORT.md  README.md  System76-Power-Fan-DBus-Integration.md  args.rs  build-containerized.sh  build.rs  client.rs  compare-app-systems.sh  debug_pwm.rs  deep-compare-fan-app.sh  diagnose-mega.sh  diagnose_pwm.sh  fan-control-solution.sh  fan.rs  fan_curve_gui.rs  fan_test.csv  fan_test_demo.csv  fan_test_fast.csv  fan_test_realtime.csv  fan_test_verification.csv  fans-auto.sh  fans-max.sh  install-isolated.sh  install-system76-power-fork.sh  install.sh  launch.sh  lib.rs  main.rs  manual-pwm-test.sh  mod.rs  monitor-daemon-and-pwm.sh  package.json  pop-os-fan-analysis.sh  pwm-bypass-solution-fixed.sh  pwm-bypass-solution.sh  pwm-detective.sh  (+11 more)
.github/workflows/: ci.yml  fresh-install-test.yml
src/: args.rs  client.rs  cpu_temp.rs  errors.rs  fan.rs  fan_control.rs  fan_curve_gui.rs  fan_detector.rs  fan_monitor.rs  iced_gui.rs  lib.rs  logging.rs  main.rs  system76_power_client.rs  thelio_io.rs
src/daemon/: mod.rs
