[package]
name = "fan-curve-app"
version = "0.1.0"
authors = ["Tony <tony@example.com>"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.32.2"
egui = "0.32.2"
fern = "0.6"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "signal"] }
zbus = { version = "3.15.2", default-features = false, features = ["tokio"] }
zbus_polkit = { version = "3.0.0", features = ["tokio"] }
zvariant = "3.15.2"



[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.9.0"

[build-dependencies]
chrono = "0.4"
